--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
     <div id="vis"></div>
 
     <!-- include D3 library -->
-    <script src="./web_modules/d3/dist/d3.min.js"></script>
+    <script src="./web_modules/d3/d3.js"></script>
     <!-- include the main script -->
     <script src="./src/main.js" defer async></script>
 </body>
