--- a/code/index.html
+++ b/code/index.html
@@ -12,8 +12,15 @@
 
     <!-- include D3 library -->
     <script src="./web_modules/d3/d3.js"></script>
+
+    <!-- include dagre library -->
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/graphlib/dist/graphlib.core.js"></script>
+    <script src="bower_components/dagre/dist/dagre.core.js"></script>
+    <script src="bower_components/dagre-d3/dist/dagre-d3.core.js"></script>
+
     <!-- include the main script -->
-    <script src="./src/main.js" defer async></script>
+    <script src="src/main.js" defer async></script>
 </body>
 
 </html>
