added file-type chart for the commit-details-view

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>InfoVis Lab Project Template</title>
     <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="./src/details/commit_details.css">
 
 </head>
 
@@ -25,6 +26,7 @@
 
     <!-- include selfmade scripts -->
     <script src="src/history.js" defer async></script>
+    <script src="src/details/commit_details.js" defer async></script>
 
     <!-- include the main script -->
     <script src="src/main.js" defer async></script>
