--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
     <title>InfoVis Lab Project Template</title>
     <link rel="stylesheet" href="./src/style.css">
     <link rel="stylesheet" href="./src/details/commit_details.css">
+    <link rel="stylesheet" href="./src/history/history.css">
 
 </head>
 
@@ -20,12 +21,14 @@
     <script src="./web_modules/cytoscape-klay.js" ></script>
     <script src=".\web_modules\dagre.js"></script>
     <script src=".\web_modules\cytoscape-dagre.js"></script>
+    <script src=".\web_modules\dagre-d3.core.js"></script>
+    <script src=".\web_modules\dagre-d3.js"></script>
 
 
 
 
     <!-- include selfmade scripts -->
-    <script src="src/history.js" defer async></script>
+    <script src="src/history/history.js" defer async></script>
     <script src="src/details/commit_details.js" defer async></script>
 
     <!-- include the main script -->
