history div & details div are now horizontally resizable

--- a/code/index.html
+++ b/code/index.html
@@ -13,6 +13,9 @@
 <body>
     <div id="vis"></div>
 
+    <!-- include thrid party scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.11/split.min.js"></script>
+
     <!-- include D3 library -->
     <script src="./web_modules/d3/d3.js"></script>
     <script src="./web_modules/cytoscape.min.js" ></script>
@@ -23,9 +26,6 @@
     <script src=".\web_modules\cytoscape-dagre.js"></script>
     <script src=".\web_modules\dagre-d3.core.js"></script>
     <script src=".\web_modules\dagre-d3.js"></script>
-
-
-
 
     <!-- include selfmade scripts -->
     <script src="src/history/history.js" defer async></script>
