can select author now

--- a/code/index.html
+++ b/code/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <title>InfoVis Lab Project Template</title>
     <link rel="stylesheet" href="./src/style.css">
-    <link rel="stylesheet" href="./src/details/commit_details.css">
+    
+    <link rel="stylesheet" href="./src/header/header.css">
     <link rel="stylesheet" href="./src/history/history.css">
-
+    <link rel="stylesheet" href="./src/details/commit_details.css">
+    <link rel="stylesheet" href="./src/details/author_details.css">
 </head>
 
 <body>
@@ -28,6 +30,7 @@
     <script src=".\web_modules\dagre-d3.js"></script>
 
     <!-- include selfmade scripts -->
+    <script src="src/header/header.js" defer async></script>
     <script src="src/history/history.js" defer async></script>
     <script src="src/details/commit_details.js" defer async></script>
 
