selecting a commit deselects the selected  author

--- a/code/index.html
+++ b/code/index.html
@@ -33,6 +33,7 @@
     <script src="src/header/header.js" defer async></script>
     <script src="src/history/history.js" defer async></script>
     <script src="src/details/commit_details.js" defer async></script>
+    <script src="src/details/author_details.js" defer async></script>
 
     <!-- include the main script -->
     <script src="src/main.js" defer async></script>
