--- a/code/src/getrepojson.html
+++ b/code/src/getrepojson.html
@@ -2,99 +2,101 @@
 <html>
 <head>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="https://d3js.org/d3-queue.v3.min.js"></script>
+    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
 </head>
 <body>
-    <p class="branch1"></p>
-    <p class="branch2"></p>
+<p class="mypanel"></p>
 
-    <script>
+<script>
+    var untildate = new Date();
+    var sincedate = new Date(untildate);
+    sincedate.setDate(sincedate.getDate() - 30);
 
+    var until = untildate.toISOString();
+    var since = sincedate.toISOString();
 
-        //https://developer.github.com/v3/#rate-limiting
-        //https://developer.github.com/v3/#basic-authentication
-        //https://developer.github.com/apps/building-oauth-apps/authorizing-oauth-apps/#web-application-flow
-        //https://github.com/settings/applications/1302730
-
-        // curl -i https:/api.github.com/users/richardwolfmayr
-
-        var untildate = new Date();
-		untildate.setDate(untildate.getDate()-19);
-		var sincedate = new Date(untildate);
-		sincedate.setDate(sincedate.getDate() - 3);
-		  
-		var until = untildate.toISOString(); 
-		var since = sincedate.toISOString();
-
-		var branchname1 = "experimental";
-		  
-		// Printing the converted string. 
-		//document.write(since); 
-		//document.write("<br>");
-		//document.write(until);
-
-		var webservice1 = "https://api.github.com/repos/gtn/exacomp/commits?sha="+branchname1+"&since="+since+"&until="+until;
-		// var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
-        // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
-		// document.write(webservice);
-		d3.json(webservice1, function(commits) {
-			let queue = d3.queue();
-			let text = "[<br>";
-			commits.forEach(function(singlecommit){
-				queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
-			});
-
-			queue.awaitAll(function(error,details) {
-				if(error) throw error;
-				details.forEach(function(commit,index,arr){
-                    // commit.branchname = branchname1;
-					commit.files.forEach(function(file){
-						file.patch = null; //commit->file->patch creates a problem sometimes
-					});
-					if(index === arr.length-1){ //for last element: dont print ","
-						text += JSON.stringify(commit,null,4);
-					}else{
-						text += JSON.stringify(commit,null,4)+',<br>';
-					}
-				});
-				d3.select("#branch1").html( "<pre>"+text+"<br>]  </pre>");
-			});
-		});
+    // Printing the converted string.
+    //document.write(since);
+    //document.write("<br>");
+    //document.write(until);
 
 
+    var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
+    // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
+    //document.write(webservice);
+    d3.json(webservice, function(commits) {
+        var queue = d3.queue();
+        var text = "[<br>";
+        commits.forEach(function(singlecommit){
+            queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
+        });
 
-        // d3.select("branch1").append("br");
-        //
-        // //same thing for different branch
-        // var branchname2 = "ics-import-for-weekly-schedule";
-        // var webservice2 = "https://api.github.com/repos/gtn/exacomp/commits?sha="+branchname2+"&since="+since+"&until="+until;
-        // // var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
-        // // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
-        // //document.write(webservice);
-        // d3.json(webservice2, function(commits) {
-        //     let queue = d3.queue();
-        //     let text = "[<br>";
-        //     commits.forEach(function(singlecommit){
-        //         queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
-        //     });
-        //
-        //     queue.awaitAll(function(error,details) {
-        //         if(error) throw error;
-        //         details.forEach(function(commit,index,arr){
-        //             commit.branchname = branchname2;
-        //             commit.files.forEach(function(file){
-        //                 file.patch = null; //commit->file->patch creates a problem sometimes
-        //             });
-        //             if(index === arr.length-1){ //for last element: dont print ","
-        //                 text += JSON.stringify(commit,null,4);
-        //             }else{
-        //                 text += JSON.stringify(commit,null,4)+',<br>';
-        //             }
-        //         });
-        //         d3.select("#branch2").append("html").html( "<pre>"+text+"<br>]  </pre>");
-        //     });
-        // });
+        queue.awaitAll(function(error,details) {
+            if(error) throw error;
+            details.forEach(function(commit,index,arr){
+                commit.files.forEach(function(file){
+                    file.patch = null; //commit->file->patch creates a problem sometimes
+                });
+                if(index === arr.length-1){ //for last element: dont print ","
+                    text += JSON.stringify(commit,null,4);
+                }else{
+                    text += JSON.stringify(commit,null,4)+',<br>';
+                }
+            });
+            d3.select(".mypanel").html( "<pre>"+text+"<br>]  </pre>");
+        });
+    });
+</script>
+</body>
+</html>
+<!doctype html>
+<html>
+<head>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
+</head>
+<body>
+<p class="mypanel"></p>
 
-    </script>
+<script>
+    var untildate = new Date();
+    var sincedate = new Date(untildate);
+    sincedate.setDate(sincedate.getDate() - 30);
+
+    var until = untildate.toISOString();
+    var since = sincedate.toISOString();
+
+    // Printing the converted string.
+    //document.write(since);
+    //document.write("<br>");
+    //document.write(until);
+
+
+    var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
+    // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
+    //document.write(webservice);
+    d3.json(webservice, function(commits) {
+        var queue = d3.queue();
+        var text = "[<br>";
+        commits.forEach(function(singlecommit){
+            queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
+        });
+
+        queue.awaitAll(function(error,details) {
+            if(error) throw error;
+            details.forEach(function(commit,index,arr){
+                commit.files.forEach(function(file){
+                    file.patch = null; //commit->file->patch creates a problem sometimes
+                });
+                if(index === arr.length-1){ //for last element: dont print ","
+                    text += JSON.stringify(commit,null,4);
+                }else{
+                    text += JSON.stringify(commit,null,4)+',<br>';
+                }
+            });
+            d3.select(".mypanel").html( "<pre>"+text+"<br>]  </pre>");
+        });
+    });
+</script>
 </body>
 </html>
