--- a/code/src/getrepojson.html
+++ b/code/src/getrepojson.html
@@ -8,9 +8,11 @@
 <p class="mypanel"></p>
 
 <script>
-    var untildate = new Date();
+    var untildate = new Date("2020-04-16");
     var sincedate = new Date(untildate);
     sincedate.setDate(sincedate.getDate() - 30);
+    debugger
+
 
     var until = untildate.toISOString();
     var since = sincedate.toISOString();
@@ -27,57 +29,8 @@
     d3.json(webservice, function(commits) {
         var queue = d3.queue();
         var text = "[<br>";
-        commits.forEach(function(singlecommit){
-            queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
-        });
-
-        queue.awaitAll(function(error,details) {
-            if(error) throw error;
-            details.forEach(function(commit,index,arr){
-                commit.files.forEach(function(file){
-                    file.patch = null; //commit->file->patch creates a problem sometimes
-                });
-                if(index === arr.length-1){ //for last element: dont print ","
-                    text += JSON.stringify(commit,null,4);
-                }else{
-                    text += JSON.stringify(commit,null,4)+',<br>';
-                }
-            });
-            d3.select(".mypanel").html( "<pre>"+text+"<br>]  </pre>");
-        });
-    });
-</script>
-</body>
-</html>
-<!doctype html>
-<html>
-<head>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/d3-queue.v3.min.js"></script>
-</head>
-<body>
-<p class="mypanel"></p>
-
-<script>
-    var untildate = new Date();
-    var sincedate = new Date(untildate);
-    sincedate.setDate(sincedate.getDate() - 30);
-
-    var until = untildate.toISOString();
-    var since = sincedate.toISOString();
-
-    // Printing the converted string.
-    //document.write(since);
-    //document.write("<br>");
-    //document.write(until);
-
-
-    var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
-    // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
-    //document.write(webservice);
-    d3.json(webservice, function(commits) {
-        var queue = d3.queue();
-        var text = "[<br>";
+        debugger
+        // commits = commits.slice(0,25);
         commits.forEach(function(singlecommit){
             queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
         });
