--- a/code/src/getrepojson.html
+++ b/code/src/getrepojson.html
@@ -8,7 +8,7 @@
 <p class="mypanel"></p>
 
 <script>
-    var untildate = new Date("2020-04-16");
+    var untildate = new Date("2020-03-25");
     var sincedate = new Date(untildate);
     sincedate.setDate(sincedate.getDate() - 30);
     debugger
@@ -30,7 +30,7 @@
         var queue = d3.queue();
         var text = "[<br>";
         debugger
-        // commits = commits.slice(0,25);
+        commits = commits.slice(0,30);
         commits.forEach(function(singlecommit){
             queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
         });
