--- a/code/src/getrepojson.html
+++ b/code/src/getrepojson.html
@@ -8,9 +8,9 @@
 <p class="mypanel"></p>
 
 <script>
-    var untildate = new Date("2020-03-25");
+    var untildate = new Date("2020-05-23");
     var sincedate = new Date(untildate);
-    sincedate.setDate(sincedate.getDate() - 30);
+    sincedate.setDate(sincedate.getDate() - 300);
     debugger
 
 
@@ -22,17 +22,22 @@
     //document.write("<br>");
     //document.write(until);
 
+    // curl -i https:/api.github.com/users/richardwolfmayr
 
-    var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
-    // var webservice = "https://api.github.com/repos/richardwolfmayr/diablo2d/commits?sha=master&since="+since+"&until="+until;
+
+    // var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
+    var webservice = "https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits?sha=master&since="+since+"&until="+until;
+    // var webservice = "https://api.github.com/repos/r-spacex/SpaceX-API/commits?sha=master&since="+since+"&until="+until;
+
     //document.write(webservice);
     d3.json(webservice, function(commits) {
         var queue = d3.queue();
         var text = "[<br>";
         debugger
-        commits = commits.slice(0,30);
+        commits = commits.slice(0,25);
         commits.forEach(function(singlecommit){
-            queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
+            // queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
+            queue.defer(d3.json,'https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits/'+singlecommit.sha);
         });
 
         queue.awaitAll(function(error,details) {
