added preprocessing (sorting, aggregating) to the file type data

--- a/code/index.html
+++ b/code/index.html
@@ -33,6 +33,7 @@
     <!-- include selfmade scripts -->
     <script src="src/header/header.js" defer async></script>
     <script src="src/history/history.js" defer async></script>
+    <script src="src/details/details_util.js" defer async></script>
     <script src="src/details/repo_details.js" defer async></script>
     <script src="src/details/commit_details.js" defer async></script>
     <script src="src/details/author_details.js" defer async></script>
