added third repo, style and wording fixes

--- a/code/src/getrepojson.html
+++ b/code/src/getrepojson.html
@@ -8,9 +8,9 @@
 <p class="mypanel"></p>
 
 <script>
-    var untildate = new Date("2020-05-23");
+    var untildate = new Date("2015-09-18");
     var sincedate = new Date(untildate);
-    sincedate.setDate(sincedate.getDate() - 300);
+    sincedate.setDate(sincedate.getDate() - 1000);
     debugger
 
 
@@ -26,18 +26,19 @@
 
 
     // var webservice = "https://api.github.com/repos/gtn/exacomp/commits?sha=experimental&since="+since+"&until="+until;
-    var webservice = "https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits?sha=master&since="+since+"&until="+until;
-    // var webservice = "https://api.github.com/repos/r-spacex/SpaceX-API/commits?sha=master&since="+since+"&until="+until;
+    // var webservice = "https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits?sha=master&since="+since+"&until="+until;
+    var webservice = "https://api.github.com/repos/albertz/openlierox/commits?sha=0.59&since="+since+"&until="+until;
 
     //document.write(webservice);
     d3.json(webservice, function(commits) {
         var queue = d3.queue();
         var text = "[<br>";
         debugger
-        commits = commits.slice(0,25);
+        commits = commits.slice(0,4);
         commits.forEach(function(singlecommit){
             // queue.defer(d3.json,'https://api.github.com/repos/gtn/exacomp/commits/'+singlecommit.sha);
-            queue.defer(d3.json,'https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits/'+singlecommit.sha);
+            // queue.defer(d3.json,'https://api.github.com/repos/jku-icg-classroom/infovis-lab-project-2020-gitvis/commits/'+singlecommit.sha);
+            queue.defer(d3.json,'https://api.github.com/repos/albertz/openlierox/commits/'+singlecommit.sha);
         });
 
         queue.awaitAll(function(error,details) {
